# omni-scrabbler

./: .gitignore  Assembly-CSharp.csproj  CMakeCache.txt  CMakeLists.txt  Game.txt  Game1.txt  Omni-Scrabbler.sln  README.md  Scrabble-2.0.sln  Scrabble-2.0.userprefs  Scrabble.sln  Scrabble.vcxproj  Scrabble.vcxproj.filters  UpgradeLog.htm  omni-scrabbler.sln  output.txt  results.txt  serverpipe.cpp  source.cpp
Assets/Materials/: Capture.mat
DataStructures/: Move.cpp  Rack.cpp
EndGameSimulation/: EndGameSim.cpp  EndGameSim.h
Evaluators/: EndgameEvaluator.cpp  EndgameEvaluator.h  Evaluator.h  MidgameEvaluator.cpp  MidgameEvaluator.h  PreendgameEvaluator.cpp  PreendgameEvaluator.h
GADDAG/: GADDAG.cpp  GADDAG.h  Node.cpp  Node.h  dictionary.cpp  dictionary.h  source.cpp  trial.cpp
Integration/: Comm.cpp  Comm.h  GUI.cpp  GUI.h  GameManager.cpp  GameManager.h  Structs.cpp  easywsclient.cpp  easywsclient.hpp  source1.cpp
Models/: Agent.cpp  Agent.h  Bag.cpp  Bag.h  Board.cpp  Board.h  HumanMode.cpp  HumanMode.h  Move.cpp  Move.h  Play.cpp  Play.h  Rack.cpp  Rack.h  Tile.cpp  Tile.h  WordPossibility.cpp  WordPossibility.h
MonteCarlo/: MonteCarlo.cpp  MonteCarlo.h
Move Generator/: MoveGenerate.cpp  MoveGenerate.h  MoveGenerator.cpp
MoveGenerator/: MoveGenerate.cpp  MoveGenerate.h  MoveGenerator.cpp  MoveGenerator.h
ProjectSettings/: EditorBuildSettings.asset  TagManager.asset
Strategy/: SuperLeaveLoader.cpp  SuperLeaveLoader.h
TileScoreCalculator/: TileScoreCalculator.cpp  TileScoreCalculator.h
assets/: letters.txt  test-dict.txt  worths
(+36 files in other folders)
